# example-repo

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
example_repo/: __init__.py  factorial.py
notebooks/: Untitled.ipynb
tests/: test_factorial.py
