[metadata]
name = example-repo
summary = functions for running OpenCLSim simulations
author = Pieter van Halem
author-email = pieter.vanhalem@vanoord.com
keywords = web wsgi bfg pylons pyramid
license = none
home-page = https://openclsim.data.vanoord.com/
description-file = README.md

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",

[files]

packages =
    example_repo

[extras]


[mypy]
ignore_missing_imports = True

[mypy-example_repo]
allow_untyped_defs = True

[test]
addopts = tests example_repo
    --cov 
    --cov-report term 
    --cov-report html
    --black
    --isort
    --pylama
    -W default

[tool:isort]
known_first_party=example_repo
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[tool:pytest]
addopts =
    --verbose
    -W default
testpaths = tests example_repo
filterwarnings =
    error
    ignore::UserWarning
    
[pylama:tests/*.py]
format = pylint
linters = pycodestyle,pydocstyle,pyflakes
ignore = D107,D203,D212,D213,D402,D413,D415,D416,D417

[pylama]
format = pylint
linters = pycodestyle,pydocstyle,pyflakes
skip = *docs*
### see https://github.com/PyCQA/pydocstyle/issues/397 
### for docstring conventions. This package uses the numpy convention
### E501: line to long >79 is taken care of by black
### D202: Conflicts with black
ignore = D102,D107,D202,D203,D212,D402,D413,D415,D416,D417,E501,E203
# ignore = D105,D202,D203,D205,E1136,D213,D406,D407,D413,E501,D101,D102,D103,E203

[pylama:pycodestyle]
max_line_length = 88

[pylama:pylint]
disable=R,C,W,I
good-names=log

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
